CmdBot Changelog
----------------
CmdBot (current)

    * added the `aliases` utility.
    * added the `reply` command.
    * handle exception gracefully. now the bot doesn't quit when a command
      raises an exception.
    * better unicode error handling
    * better logging

CmdBot (v1.0.4)

    * Bugfixes: prevent unicode errors
    * Documentation: how to add command aliases
    * Helper: _raw_message, a half-hidden raw string showing the non-parsed
      message
    * new decorator: @no_verb, to execute one or several actions each time
      someone says anything.
    * new decorator: @no_help, to discard help display.

CmdBot (v1.0.3)

   * Important bugfix with the "admins" configuration loading.

CmdBot (v1.0.2)

    * brain "knows" stuff (use its `knows` method)
    * bugfix: quit properly
    * localisation / translation of basic bot lines (only language available
      ATM: French. What a surprise, huh?)
    * a new sample: `samples/gamebot.py`
    * cleanup / refactoring of decorators.


CmdBot (v1.0.1)

    * help automatically fetches available commands
    * help is displaying command docstring if you type: 'help <mycommand>'
    * documentation is now available on http://rtfd.org/docs/cmdbot
    * a new configuration module: ArgumentConfiguration. Parameters are loaded
      through the command line arguments.
    * a new sample: `samples/argbot.py`
    -- Bruno Bord <bruno@jehaisleprintemps.net>  2011-12-10


CmdBot (v1.0.0)

    * initial version
    * Basic bot
    * Documentation in README
    * Extensible (just build you own class via heritage)
    * Configuration via a ".ini" file.
    -- Bruno Bord <bruno@jehaisleprintemps.net>  2011-12-07